# h2645_util

./: CMakeLists.txt  README.md  example.c  h2645.pc.in  h2645_util.pc  h2645_version.h.in  h264_keyframe.txt
cmake/: hisiv200.toolchain.cmake
include/: h264_ps.h  h265_ps.h
install/linux/hisiv200/include/: h2645_version.h  h264_ps.h
install/linux/hisiv200/lib/pkgconfig/: h2645_util.pc
install/linux/hisiv200/share/: example.c
install/linux/x86/include/: bs.h  h2645_util.h  h2645_vui.h
install/linux/x86/lib/pkgconfig/: h2645_util.pc
install/windows/x86/lib/: h2645_util.lib
install/windows/x86/lib/pkgconfig/: h2645_util.pc
install/windows/x86_64/include/: bs.h  h2645_version.h  h265_ps.h
install/windows/x86_64/lib/: h2645_util.lib
install/windows/x86_64/lib/pkgconfig/: h2645_util.pc
install/windows/x86_64/share/: example.c
lib/windows/x86_64/: h2645_util.lib  h2645_utild.lib
src/: h264_ps.c  h265_ps.c
